# numpy-cnn

./: README.md  demo.ipynb  pyproject.toml  requirements.txt
numpycnn/: __init__.py  attention.py  augmentation.py  conv_extra.py  dataloader.py  datasets.py  layers.py  losses.py  model.py  optimizers.py  recurrent.py  schedulers.py  tree.py  zoo.py
numpyml/: __init__.py  metrics.py  utils.py  visualize.py  zoo.py
numpyml/data/: __init__.py  datasets.py
numpyml/ml/: __init__.py  decomposition.py  linear.py  neighbors.py  tree.py
numpyml/nn/: __init__.py  activations.py  attention.py  blocks.py  callbacks.py  layers.py  losses.py  optimizers.py  recurrent.py  regularization.py  schedulers.py
tests/: test_activations.py  test_attention.py  test_augmentation.py  test_dataloader.py  test_layers.py  test_losses.py  test_metrics.py  test_ml.py  test_model.py  test_new_layers.py  test_optimizers.py  test_recurrent.py  test_schedulers.py
