[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "numpycnn"
version = "0.1.0"
description = "Deep learning framework built entirely with NumPy"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
